--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "koa": "^2.7.0",
+    "koa-body": "^4.0.8",
     "koa-cors": "0.0.16",
     "koa-router": "^7.4.0",
     "koa-static-cache": "^5.1.2",
+    "koa-swig": "^2.2.1",
     "mysql2": "^1.6.5",
     "sequelize": "^4.42.0"
   }
