--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "supervisor app"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +21,8 @@
     "mysql2": "^1.6.5",
     "sequelize": "^4.42.0",
     "ws": "^6.1.4"
+  },
+  "devDependencies": {
+    "supervisor": "^0.12.0"
   }
 }
